--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script>
+      let newWebRTC;
+    </script>
   </head>
   <body>
     <div class="bottomleftmenu">
@@ -11,6 +14,7 @@
         Full Screen
       </button>
     </div>
+    <script src="./arc_module.js" type="module"></script>
     <script>
       function toggleFullScreen() {
         if (!document.fullscreenElement) {
@@ -21,7 +25,8 @@
             );
           });
         } else {
-          document.getElementById("full-screen-btn").textContent = "Full Screen";
+          document.getElementById("full-screen-btn").textContent =
+            "Full Screen";
           document.exitFullscreen();
         }
       }
