--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </script>
   </head>
   <body>
-    <div class="sizeContainer">
+    <div id="sizeContainer">
       <button id="full-screen-btn" onclick="toggleFullScreen()">
         Full Screen
       </button>
