--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       <button id="full-screen-btn" onclick="toggleFullScreen()">
         Full Screen
       </button>
+      <div class="loader-overlay">
+        <div class="loader">
+          <p class="text-white">Lining up...</p>
+        </div>
+      </div>
     </div>
     <script src="./arc_module.js" type="module"></script>
     <script>
