--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </script>
   </head>
   <body>
-    <div id="sizeContainer">
+    <div id="sizeContainer" style="width: 100vw; height: 100vh;">
       <button id="full-screen-btn" onclick="toggleFullScreen()">
         Full Screen
       </button>
