--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <button id="full-screen-btn" onclick="toggleFullScreen()">
       Full Screen
     </button>
-    <button id="full-screen-btn" onclick='() => handleSendCommands({ autocamera: "Yes" });'>
+    <button id="auto-camera-btn" onclick='() => handleSendCommands({ autocamera: "Yes" });'>
       Auto Camera
     </button>
     <div class="loader-overlay">
