--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <button id="auto-camera-btn" onclick='setAutoCamera()'>
       Auto Camera
     </button>
+    <div id="videoContainer">
+      <audio id="audioRef"></audio>
+    </div>
     <div class="loader-overlay">
       <div class="loader">
         <p class="text-white">Lining up...</p>
